--- a/blog/templates/allBlogs.html
+++ b/blog/templates/allBlogs.html
@@ -83,7 +83,7 @@
         font-size: 2.5rem;
         margin: .75rem 0.2rem;
         margin-left: 0;
-        text-transform: uppercase;
+        text-transform: capitalize;
         color: #4facfe;
     }
 
@@ -112,8 +112,6 @@
         background: linear-gradient(to right, #00f2fe 0%, #4facfe 100%);
         text-decoration: none;
         color: white;
-    }
-    }
     }
 
     @media (max-width: 1068px) {
