completed blog page

--- a/other/templates/about.html
+++ b/other/templates/about.html
@@ -19,6 +19,19 @@
         #hometext {
             font-size: 4rem;
         }
+
+    }
+
+    @media(max-width: 868px) {
+        .img-wrap img {
+            padding: 7px;
+        }
+
+        @media(max-width: 568px) {
+            .img-wrap img {
+                padding: 5px;
+            }
+        }
     }
 
     #img-div {
