--- a/blog/templates/allBlogs.html
+++ b/blog/templates/allBlogs.html
@@ -31,7 +31,7 @@
         margin-top: 30px;
         width: 100%;
         max-width: 55rem;
-        padding: 3rem;
+        padding: 2.5rem 3rem;
         background-color: white;
         box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, .2);
         display: flex;
@@ -43,7 +43,7 @@
         margin-right: -4.5rem;
         min-width: 21rem;
         max-width: 21rem;
-        height: 17rem;
+        height: 17.5rem;
         transform: translateX(-8rem);
         position: relative;
     }
@@ -146,6 +146,21 @@
             font-size: 2rem;
         }
 
+        /* 
+        @media (min-width: 668px) {
+
+
+            .blog-post__img img {
+                padding-left: 3rem;
+                padding-right: 3rem;
+            }
+
+            .blog-post__img {
+                margin-left: -3rem;
+                margin-right: -3rem;
+            }
+        } */
+
     }
 </style>
 {% endblock %}
@@ -169,11 +184,12 @@
                 <span>{{blog.date|date:'j F Y'}}</span>
             </div>
             <h2 class="blog-post__title">{{blog.title}}</h2>
-            <p class="blog-post__body">{{blog.body|truncatechars:175}}</p>
-            <a href="#" class="blog-post__cta">Read More</a>
+            <p class="blog-post__body">{{blog.body|striptags|truncatechars:175}}</p>
+            <a href="{% url 'detail' blog.id %}" class="blog-post__cta">Read More</a>
         </div>
     </div>
     {% endfor %}
+    <br><br><br>
 </div>
 
 {% endblock %}
