--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,13 +1,75 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block styles %} {% endblock %}
+{% block styles %}
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
+
+    body {
+        background: #eee
+    }
+
+    #blog {
+        background-color: white;
+        margin-top: 1rem;
+        ;
+    }
+
+    #title {
+        font-size: 65px;
+        text-align: center;
+        text-transform: capitalize;
+        margin-bottom: 2px;
+    }
+
+    #date {
+        text-align: center;
+        color: #6c757d;
+        font-size: 20px;
+    }
+
+    #img {
+        width: 100%;
+        height: auto;
+        max-height: 600px;
+        object-fit: contain;
+        margin: 20px auto;
+        padding: 0 20px;
+    }
+
+    #body {
+        font-size: 16px;
+        padding-bottom: 1rem;
+        margin-bottom: 3rem;
+    }
+
+    .center {
+        margin-right: auto;
+        margin-left: auto;
+        display: block;
+    }
+
+    @media (max-width: 868px) {
+        #title {
+            font-size: 50px;
+        }
+
+        @media (max-width: 668px) {
+            #title {
+                font-size: 40px;
+            }
+        }
+    }
+</style> {% endblock %}
 
 {% block title %} Blog | {{blog.title}} | Pebblewave {% endblock %}
 
 {% block content %}
 
-
-<h1>{{ blog.title }}</h1>
-<p>{{ blog.body }}</p>
+<div class="container" id='blog'>
+    <h1 id='title'>{{blog.title}}</h1>
+    <span id="date" class='center'>{{blog.date|date:'F j, Y'}}</span>
+    <img class='center' id='img' src="{{blog.image.url}}" alt="Blog image">
+    <div id="body">{{blog.body|safe}}</div>
+</div>
 
 {% endblock %}
