--- a/other/templates/contact.html
+++ b/other/templates/contact.html
@@ -15,7 +15,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background-color: aquamarine;
+        background-image: url('/static/imgs/bg.jpg');
         /*TODO: Choose a background image or a better background color*/
         background-size: cover;
     }
