--- a/other/templates/base.html
+++ b/other/templates/base.html
@@ -41,14 +41,14 @@
             </a>
           </li> -->
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               Products
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Envelopes</a>
-              <a class="dropdown-item" href="#">Gift Tags</a>
-              <a class="dropdown-item" href="#">Wine Bags</a>
+              <a class="dropdown-item" href="{% url 'envelopes' %}">Envelopes</a>
+              <a class="dropdown-item" href="{% url 'giftTags' %}">Gift Tags</a>
+              <a class="dropdown-item" href="{% url 'wineBags' %}">Wine Bags</a>
             </div>
           </li>
           <li class="nav-item">
