Made small improvements here and there

--- a/other/static/style.css
+++ b/other/static/style.css
@@ -1,7 +1,6 @@
-/*Main color scheme: #FFDBBA*/
+/*Main color scheme: #ffdbba */
 /*just to be clear, the name in the line above is not associated with a variable, so you have to manually update the color in eveery place */
 
-/*TODO: Decide on a primary and secondary color scheme for the website */
 
 /* generic css */
 
