changed contact info

--- a/other/templates/contact.html
+++ b/other/templates/contact.html
@@ -205,9 +205,9 @@
                 <div class="text">
                     <h3>Address</h3>
                     <p>
-                        11 Garden Enclave, South City, <br />
+                        6-C, Sarabha Nagar<br />
                         Ludhiana, Punjab, <br />
-                        142027
+                        140001
                     </p>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                 <div class="text">
                     <h3>Phone</h3>
                     <p>
-                        9815501833
+                        9888700002
                     </p>
                 </div>
             </div>
@@ -229,7 +229,7 @@
                 <div class="text">
                     <h3>Email</h3>
                     <p>
-                        name@example.com
+                        rashi@stexports.com
                     </p>
                 </div>
             </div>
