--- a/other/templates/base.html
+++ b/other/templates/base.html
@@ -5,15 +5,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="{% static 'style.css'%}" />
   <link rel="icon" type="image/png" href="{% static 'imgs/pebblewave.png' %}" />
   <!-- bootstrap css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+
+  <link rel="stylesheet" href="{% static 'style.css'%}" />
   {% block styles %}{% endblock %}
   <title>{% block title %}{% endblock %}</title>
+  <style>
+    #footer {
+      background-color: rgba(255, 219, 186, 0.6);
+      text-align: center;
+      padding: 13px 0;
+    }
+
+    #footer div {
+      margin: 5px;
+    }
+  </style>
 </head>
 
 <body>
@@ -61,6 +73,10 @@
     </div>
   </nav>
   {% block content %}{% endblock %}
+  <footer id="footer">
+    <div id="developed-by">Website developed by Rayansh Gupta</div>
+    <div id="email">rayanshgupta1406@gmail.com</div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
