--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -33,7 +33,7 @@
             <img src="{{product.image.url}}" class="card-img-top" alt="image">
             <div class="card-body">
                 <h5 class="card-title">{{product.name}}</h5>
-                <p class="card-text">₹{{product.price}}</p>
+                <!-- <p class="card-text">₹{{product.price}}</p> -->
                 <a href="{% url 'contact' %}" class="btn btn-primary">Buy</a>
             </div>
         </div>
