--- a/other/templates/contact.html
+++ b/other/templates/contact.html
@@ -21,6 +21,7 @@
     .contact::after {
         content: "";
         background-image: url('/static/imgs/art3.jpg');
+        background-size: cover;
         opacity: 0.4;
         top: 0;
         left: 0;
