--- a/other/templates/contact.html
+++ b/other/templates/contact.html
@@ -28,14 +28,14 @@
         bottom: 0;
         right: 0;
         position: absolute;
-        transform: scaleX(-1);
         z-index: -1;
     }
 
     @media (max-width: 1280px) {
         .contact::after {
             content: '';
-            background-image: url('/static/imgs/art1.jpg')
+            background-image: url('/static/imgs/art1.jpg');
+            opacity: 1.0;
         }
     }
 
