--- a/other/static/style.css
+++ b/other/static/style.css
@@ -5,6 +5,7 @@
 /* generic css */
 
 @import url("https://fonts.googleapis.com/css?family=Poppins:wght@200;300;400;500;600;700;800;900&display='swap'");
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&display=swap');
 
 @keyframes change-color {
   from {
