--- a/other/templates/contact.html
+++ b/other/templates/contact.html
@@ -16,6 +16,7 @@
         align-items: center;
         flex-direction: column;
         background-size: cover;
+        background-position: center;
     }
 
     .contact::after {
