--- a/other/templates/contact.html
+++ b/other/templates/contact.html
@@ -30,6 +30,7 @@
         right: 0;
         position: absolute;
         z-index: -1;
+        background-position: center;
     }
 
     @media (max-width: 1280px) {
