added a happy clients page

--- a/other/templates/about.html
+++ b/other/templates/about.html
@@ -105,5 +105,13 @@
     </div>
 </div>
 
-<script src="{% static 'js/about.js' %}"></script>
+<script>
+    let imgDiv = document.getElementById("img-div");
+
+    if (screen.width < 1000) {
+        imgDiv.classList.add("col-7");
+        imgDiv.classList.remove("col-5");
+        document.getElementById("pDiv").classList.remove("mx-5");
+    }
+</script>
 {% endblock %}
