--- a/other/static/style.css
+++ b/other/static/style.css
@@ -56,3 +56,17 @@ body {
     color: black;
   }
 }
+
+.footer {
+  background-color: rgba(255, 219, 186, 0.6);
+  text-align: center;
+  padding: 6px 0;
+  margin-top: auto;
+  margin-bottom: 0px;
+  display: block;
+  font-size: 12px;
+}
+
+.footer div {
+  margin: 5px;
+}
