--- a/other/templates/happyCustomers.html
+++ b/other/templates/happyCustomers.html
@@ -60,6 +60,12 @@
         font-size: 15px;
     }
 
+    @media(min-width: 868px) {
+        .carousel-caption .review {
+            font-size: 16px;
+        }
+    }
+
     .body-container {
         height: 70vh;
     }
