changed about picture

--- a/other/templates/about.html
+++ b/other/templates/about.html
@@ -47,7 +47,7 @@
     <div class="row justify-content-center my-3">
         <div id="img-div" class="col-5">
             <div class="img-wrap mt-4">
-                <img src="{% static 'imgs/AnanyaAboutImg.jpg' %}" alt="Image of Ananya Gupta" />
+                <img src="{% static 'imgs/AnanyaAboutImg.jpeg' %}" alt="Image of Ananya Gupta" />
             </div>
         </div>
     </div>
